finished the save/load logic using the strategy and memento pattern