@@ -1,18 +1,19 @@
 package strategy.IO;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Files;
 
-public class JsonPersistenceStrategy implements PersistenceStrategy {
-    private final Path path;
+public class JsonPersistenceStrategy extends PersistenceStrategy<String> {
+
 
     public JsonPersistenceStrategy(String filePath) {
-        this.path = Path.of(filePath);
+        super(filePath);
     }
 
     @Override
-    public void save(byte[] serialized) throws IOException {
-        Files.write(path, serialized);
+    public void save(String serialized) throws IOException {
+        Files.writeString(path, serialized, StandardCharsets.UTF_8);
     }
 }
